# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/cli",
    "./crates/core",
    "./crates/jsvm",
    "./crates/task",
    "./scripts/tower-path",
    "./scripts/tower-task",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Axiston License 1.0"
publish = false

authors = ["Axiston <contact@axiston.com>"]
repository = "https://github.com/axiston/runtime"
homepage = "https://github.com/axiston/runtime"
documentation = "https://docs.rs/axiston"

[workspace.dependencies]
axiston-runtime-core = { path = "./crates/core", version = "0.1.0" }
axiston-runtime-jsvm = { path = "./crates/jsvm", version = "0.1.0" }
axiston-runtime-task = { path = "./crates/task", version = "0.1.0" }
tower-path = { path = "./scripts/tower-path", version = "0.1.0" }
tower-task = { path = "./scripts/tower-task", version = "0.1.0" }
