# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "runtime-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[[bin]]
name = "axiston"
path = "main.rs"

[dependencies]
runtime-core = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3", features = [] }
anyhow = { version = "1.0", features = ["backtrace"] }

tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-opentelemetry = { version = "0.25", features = [] }
opentelemetry = { version = "0.24", features = [] }

tonic = { version = "0.12", features = [] }
prost = { version = "0.13", features = [] }
tonic-types = { version = "0.12", features = [] }
prost-types = { version = "0.13", features = [] }

[build-dependencies]
tonic-build = { version = "0.12", features = [] }
prost-build = { version = "0.13", features = [] }
anyhow = { version = "1.0", features = [] }
