# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-rt-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[[bin]]
name = "axiston"
path = "main.rs"

[dependencies]
axiston-rt-server = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-opentelemetry = { version = "0.26", features = [] }
opentelemetry = { version = "0.25", features = [] }

tonic = { workspace = true }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
