# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-runtime-jsvm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
axiston-runtime-task = { workspace = true }

tokio = { version = "1.36", features = [] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0", features = [] }
tracing = { version = "0.1", features = [] }

deno_core = { version = "0.308.0", features = [] }
deno_ast = { version = "0.42.0", features = [] }
deno_permissions = { version = "0.28.0", features = [] }

deno_console = { version = "0.168.0", features = [] }
deno_crypto = { version = "0.182.0", features = [] }
deno_webidl = { version = "0.168.0", features = [] }
deno_url = { version = "0.168.0", features = [] }

deno_fs = { version = "0.78.0", features = ["sync_fs"] }
deno_http = { version = "0.166.0", features = [] }
deno_io = { version = "0.78.0", features = [] }

deno_fetch = { version = "0.192.0", features = [] }
deno_net = { version = "0.160.0", features = [] }
deno_web = { version = "0.199.0", features = [] }

deno_tls = { version = "0.155.0", features = [] }
deno_websocket = { version = "0.173.0", features = [] }
deno_webstorage = { version = "0.163.0", features = [] }
deno_canvas = { version = "0.37.0", features = [] }
deno_webgpu = { version = "0.135.0", features = [] }
