# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-rt-jsvm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
# Make sure tokio, async_trait and deno_* version are the same.
# https://github.com/denoland/deno/blob/main/Cargo.toml

axiston-rt-task = { workspace = true }
tokio = { version = "1.36", features = [] }
tracing = { version = "0.1", features = [] }
async-trait = { version = "0.1", features = [] }
ctor = { version = "0.2", features = [] }

thiserror = { workspace = true }
serde = { workspace = true }
rand = { version = "0.8", features = [] }

deno_core = { version = "0.324.0", features = [] }
deno_ast = { version = "0.44.0", features = ["transpiling"] }
deno_permissions = { version = "0.42.0", features = [] }
deno_cache_dir = { version = "0.14.0", features = [] }

deno_console = { version = "0.182.0", features = [] }
deno_crypto = { version = "0.196.0", features = [] }
deno_webidl = { version = "0.182.0", features = [] }
deno_url = { version = "0.182.0", features = [] }

deno_fs = { version = "0.92.0", features = [] }
deno_io = { version = "0.92.0", features = [] }
deno_fetch = { version = "0.206.0", features = [] }
deno_net = { version = "0.174.0", features = [] }
deno_web = { version = "0.213.0", features = [] }

deno_http = { version = "0.180.0", features = [] }
deno_tls = { version = "0.169.0", features = [] }
deno_websocket = { version = "0.187.0", features = [] }
deno_webstorage = { version = "0.177.0", features = [] }
deno_canvas = { version = "0.51.0", features = [] }
deno_webgpu = { version = "0.149.0", features = [] }
