# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-rt-schema"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[features]
# Enables or disables gRPC client code generation.
client = []
# Enables or disables gRPC server code generation.
server = []

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-types = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
prost-build = { workspace = true }
