# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-rt-task"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }

derive_more = { workspace = true }
tracing = { workspace = true }
ecow = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
