# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "runtime-type"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
